--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-gh
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: chase_hastin_cb 
+title: Historic Bloomington Walking Tours
 # tagline, a short phrase that will appear throughout the site in the top banner
 tagline: chase's first cb
 # description appears in meta tags and other locations
@@ -34,7 +34,7 @@ author: chase_hastin
 #
 # Set the metadata for your collection (the name of the csv file in your _data directory that describes the objects in your collection) 
 # Use the filename of your CSV **without** the ".csv" extension! E.g. _data/demo-metadata.csv --> "demo-metadata"
-metadata: demo-metadata
+metadata: bloomington_walking_tour
 
 ##########
 # Site/Organization Branding 
