--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -51,7 +51,7 @@ map-cluster-radius: 25 # size of clusters, from ~ 10 to 80
 ##########
 # TIMELINE PAGE
 #
-year-navigation:
+year-navigation: 1927
 year-nav-increment: 5 # set increments when auto gen nav years
 
 ##########
