--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Historic Bloomington Walking Tours
 tagline: A collection of historic walking tour brochures produced in Bloomington, Indiana
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-GH is a template for creating small digital collection exhibits on GitHub Pages designed for teaching digital library skills"
+description: 
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: chase_hastin
 
@@ -40,10 +40,10 @@ metadata: bloomington_walking_tours
 # Site/Organization Branding 
 #   Uncomment these and enter information for your organization (replacing the CDIL links and name below) if you'd like to brand your site with a logo
 #
-# organization-name: "Center for Digital Inquiry and Learning (CDIL)"
-# organization-link: https://cdil.lib.uidaho.edu/
-# organization-logo-banner: https://cdil.lib.uidaho.edu/storying-extinction/assets/img/cdil.png
-# organization-logo-nav: https://cdil.lib.uidaho.edu/assets/img/logo.png
+# organization-name: ILS-Z 652 Digital Libraries, Indiana University
+# organization-link: https://jawalsh.github.io/z652-Digital-Libraries-FA25/ 
+# organization-logo-banner: 
+# organization-logo-nav: 
 
 ##########
 # ROBOTS EXCLUDE
