--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -59,9 +59,9 @@ year-nav-increment: 5 # set increments when auto gen nav years
 #
 # add metadata fields for export in data downloads (tip: paste in first row of csv)
 # comma delimited list, reference url is automatic
-metadata-export-fields: "title,creator,date,description,subject,location,latitude,longitude,source,identifier,type,format,language,rights,rightsstatement"
+metadata-export-fields: "objectid,parentid,filename,title,tour_site_number,creator,date_of_construction,narrative,structure_type,house_type,architectural_style,architect,subject,location,latitude,longitude,source,type,format,language,rights"
 # generate a facets list for given fields, comma delimited
-metadata-facets-fields: "subject,creator,format"
+metadata-facets-fields: "objectid,parentid,filename,title,tour_site_number,creator,date_of_construction,narrative,structure_type,house_type,architectural_style,architect,subject,location,latitude,longitude,source,type,format,language,rights"
 
 ##########
 # COMPOUND OBJECTS
