--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -112,7 +112,7 @@ font-cdn: # add font stylesheet, e.g. <link href="https://fonts.googleapis.com/c
 #   icon-video: film
 #   icon-pdf: file-pdf
 #   icon-record: file-text
-#   icon-compound-object: collection
+#   icon-compound-object: cup-hot-fill
 #   icon-multiple: postcard
 #   icon-default: file-earmark # fall back icon
 #   icon-back-to-top: arrow-up-square # scroll to top icon
