--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -97,7 +97,7 @@ bootswatch: # leave blank or comment out for plain bootstrap
 base-font-size: 1.2em
 text-color: "#191919"
 link-color: "#0d6efd"
-base-font-family: '"Goudy Bookletter 1911", serif;'
+base-font-family: '"Goudy Bookletter 1911", serif'
 font-cdn: <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&display=swap" rel="stylesheet">
 
 # THEME ICONS [optional!]
