--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ title: Historic Bloomington Walking Tours
 tagline: A collection of historic walking tour brochures produced in Bloomington, Indiana
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: 
+description: This is a digitized collection of tour sites from 15 self-guided walking tour brochures produced between 2002 and 2017 by the City of Bloomington Department of Housing and Neighborhood Development. All rights to these brochures belong to the City of Bloomington Department of Housing and Neighborhood Development. The brochures were created to generate interest in prevalent architecture forms and local history in Bloomington, Indiana. Links to pdfs of 13 of the brochures can be found on the City of Bloomington [website](https://bloomington.in.gov/about/walking-tours). Physical copies are disseminated at the Monroe County History Center.
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: chase_hastin
 
